--- a/package.json
+++ b/package.json
@@ -8,14 +8,31 @@
     "db:reset": "sequelize db:migrate:undo:all & sequelize db:migrate & sequelize db:seed:all"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
+    "drift-zoom": "^1.5.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.15.0",
     "http-errors": "~1.6.3",
+    "lru-cache": "^9.1.1",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
-    "mysql2": "^3.4.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.3"
   }
 }
