--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
-NODE_ENV=development
-DB_USERNAME=root
-DB_PASSWORD=root
-DB_DATABASE="notepad"
-DB_HOST=127.0.0.1
+NODE_ENV="test"
+DB_USERNAME="root"
+DB_PASSWORD="root"
+DB_DATABASE="notepad_db"
+DB_HOST="127.0.0.1"
+DB_PORT="3306"
+
+
+MYSQL_ADDON_HOST=b2jr1k02snpri9amvlmi-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=b2jr1k02snpri9amvlmi
+MYSQL_ADDON_USER=uouuks8wq44m6aou
+MYSQL_ADDON_PORT=3306
+MYSQL_ADDON_PASSWORD=kVTJgkIBoEIcInVa0yEL
