agregue login con google

--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ MYSQL_ADDON_DB=b2jr1k02snpri9amvlmi
 MYSQL_ADDON_USER=uouuks8wq44m6aou
 MYSQL_ADDON_PORT=3306
 MYSQL_ADDON_PASSWORD=kVTJgkIBoEIcInVa0yEL
+
+
+GOOGLE_REDIRECT_CALLBACK=http://localhost:3000/auth/google/callback
+GOOGLE_CLIENT_ID=520784497341-k4p164n2uj90oc9gjs6m936t5lfknkq0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
